examples/bad/11-03-invalid-nested-return-type.lagger
int f(){
    string g() {
        return "hello";
    }
    return g();
}

int main(){
    println(f());
    return f();
}